test/files/neg/macro-reify-splice-splice/Macros_1.scala
import scala.reflect.macros.blackbox.Context

object Macros {
  def foo = macro Impls.foo

  object Impls {
    def foo(c: Context) = c.universe.reify {
      { c.universe.reify(c.universe.reify("hello world")) }.splice.splice
    }
  }
}